--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Responses — Responsee Dropdown </title>
+  <title>My Responses — Responsee dropdown feature </title>
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -53,7 +53,7 @@
           <div class="flex items-start justify-between gap-3">
             <div>
               <p class="text-sm font-medium text-gray-500">SCH_2025_001</p>
-              <h2 class="text-lg font-bold text-gray-800 mt-1">Annual School Infrastructure Audit</h2>
+              <h2 class="text-lg font-bold text-gray-800 mt-1">School Infrastructure Audit</h2>
               <p class="text-gray-600 mt-2 text-sm">Comprehensive assessment of school buildings, classrooms, toilets, drinking water, and playground facilities.</p>
               <div class="flex flex-wrap gap-2 mt-3">
                 <span class="bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Hindi</span>
